--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@
                 ></path></svg
             >
         </a>
-        <a href="https://www.goodreads.com/user/show/116528903-luz" target="_blank">
+        <a href="https://www.goodreads.com/user/show/116528903-lucas-ojeda" target="_blank">
             <span class="sr-only">Goodreads</span>
             <svg viewBox="0 0 60 60" width="32" height="32">
                 <title>Goodreads</title><g
@@ -36,7 +36,7 @@
                 </g></svg
             >
         </a>
-        <a href="mailto:luzojeda@proton.me">
+        <a href="mailto:lezojeda@gmail.com">
             <svg
                 fill="currentColor"
                 version="1.1"
@@ -45,7 +45,7 @@
                 viewBox="0 0 512 512"
                 xml:space="preserve"
             >
-                <title>luzojeda@proton.me</title>
+                <title>lezojeda@gmail.com</title>
                 <g>
                     <path
                         style="display: inline;"
