--- a/src/pages/es/fotos.astro
+++ b/src/pages/es/fotos.astro
@@ -6,6 +6,7 @@ import Base from "../../layouts/Base.astro";
 <Base fullWidthMain>
     <div>
         <h1>fotos</h1>
+        <p class="laptop">pasa el mouse por encima de las imágenes para descripciones</p>
     </div>
     <Pictures />
 </Base>
