--- a/src/pages/pictures.astro
+++ b/src/pages/pictures.astro
@@ -6,6 +6,7 @@ import Base from "../layouts/Base.astro";
 <Base fullWidthMain>
     <div>
         <h1>pictures</h1>
+        <p class="laptop">hover pictures for  captions</p>
     </div>
     <PicturesComponent />
 </Base>
