--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Posts from "../components/Posts.astro";
 import Base from "../layouts/Base.astro";
 import { getCollection, type CollectionEntry } from "astro:content";
-import ghost from '../images/ghost.gif';
 
 const posts: CollectionEntry<"blog">[] = await getCollection("blog", ({ id, data }) => {
 	const shouldShowDraft = import.meta.env.PROD ? data.draft !== true : true;
@@ -11,6 +10,6 @@ const posts: CollectionEntry<"blog">[] = await getCollection("blog", ({ id, data
 ---
 
 <Base>
-	<img class="ghost" src={ghost.src} alt="Cute ghost floating around" width="150"/>
+	<!-- <img class="ghost" src={ghost.src} alt="Cute ghost floating around" width="150"/> -->
 	<Posts posts={posts} />
 </Base>
